# Neurite

./: CMakeLists.txt  LICENSE.md  README.md
docs/: Doxyfile
include/: neurite.hpp
tests/: test_neurite  test_neurite.cpp
tests/test_neurite.dSYM/Contents/: Info.plist
tests/test_neurite.dSYM/Contents/Resources/Relocations/aarch64/: test_neurite.yml
